...
            "state" : "translated",
            "value" : "Ajouter une collection"
          }
        }
      }
    },
    "Add Folder" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ajouter un dossier"
          }
...
            "state" : "translated",
            "value" : "Manette de jeu"
          }
        }
      }
    },
    "Get Started" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Commencer"
          }
...
            "state" : "translated",
            "value" : "Plus récent d'abord"
          }
        }
      }
    },
    "Next" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Suivant"
          }
...
